# instanalyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ideaa/: misc.xml
instanalyzer/: run.py  utils.py
