[tool.poetry]
name = "instanalyzer"
version = "1.0.0"
description = ""
authors = ["Oidlichtnwoada <42490916+Oidlichtnwoada@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.1"
instagrapi = "2.1.3"
typed-argument-parser = "1.10.1"
pillow = "11.1.0"
black = "24.10.0"
mypy = "1.14.1"
pytest = "8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
